--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testcases.saroj.BB_TestCase_03" class="method navigator-link" hash-for-method="updateQuantityInCart">updateQuantityInCart</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testcases.saroj.BB_TestCase_02" class="method navigator-link" hash-for-method="addItemtoCart">addItemtoCart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testcases.saroj.BB_TestCase_03</span>
+              <span class="class-name">testcases.saroj.BB_TestCase_02</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="updateQuantityInCart">
-                  </a> <!-- updateQuantityInCart -->
-                  <span class="method-name">updateQuantityInCart</span>
+                  <a name="addItemtoCart">
+                  </a> <!-- addItemtoCart -->
+                  <span class="method-name">addItemtoCart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/_y/_18s_4h10f3fqgxkfnngtd0w0000gn/T/testng-eclipse--1781728275/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/_y/_18s_4h10f3fqgxkfnngtd0w0000gn/T/testng-eclipse-1739448954/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcases.saroj.BB_TestCase_03&quot;/&gt;
+      &lt;class name=&quot;testcases.saroj.BB_TestCase_02&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'updateQuantityInCart')
-data.setCell(0, 2, 'testcases.saroj.BB_TestCase_03')
-data.setCell(0, 3, 10884);
+data.setCell(0, 1, 'addItemtoCart')
+data.setCell(0, 2, 'testcases.saroj.BB_TestCase_02')
+data.setCell(0, 3, 5647);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,26 +220,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcases.saroj.BB_TestCase_03</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testcases.saroj.BB_TestCase_02</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">getDriver</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">login</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-start">13 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">updateQuantityInCart</span>
-                <span class="method-start">1812 ms</span>
+                <span class="method-name">addItemtoCart</span>
+                <span class="method-start">2798 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logOut</span>
-                <span class="method-start">12699 ms</span>
+                <span class="method-start">8446 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">12706 ms</span>
+                <span class="method-start">9502 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
