--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7a8682">  <td>24/01/09 18:44:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.getDriver()[pri:0, instance:testcases.saroj.BB_TestCase_03@63a5e46c]">&gt;&gt;getDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="7a8682">  <td>24/01/09 18:44:31</td>   <td>12697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logOut()[pri:0, instance:testcases.saroj.BB_TestCase_03@63a5e46c]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="7a8682">  <td>24/01/09 18:44:18</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:testcases.saroj.BB_TestCase_03@63a5e46c]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="7a8682">  <td>24/01/09 18:44:31</td>   <td>12703</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testcases.saroj.BB_TestCase_03@63a5e46c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="6461b3">  <td>24/01/09 18:44:20</td>   <td>1809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BB_TestCase_03.updateQuantityInCart()[pri:0, instance:testcases.saroj.BB_TestCase_03@63a5e46c]">updateQuantityInCart</td> 
+<tr bgcolor="6461b3">  <td>24/01/09 22:26:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BB_TestCase_02.addItemtoCart()[pri:0, instance:testcases.saroj.BB_TestCase_02@63e5e5b4]">addItemtoCart</td> 
   <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="7a8682">  <td>24/01/09 22:26:10</td>   <td>-2795</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.getDriver()[pri:0, instance:testcases.saroj.BB_TestCase_02@63e5e5b4]">&gt;&gt;getDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="7a8682">  <td>24/01/09 22:26:18</td>   <td>5648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logOut()[pri:0, instance:testcases.saroj.BB_TestCase_02@63e5e5b4]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="7a8682">  <td>24/01/09 22:26:10</td>   <td>-2785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:testcases.saroj.BB_TestCase_02@63e5e5b4]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="7a8682">  <td>24/01/09 22:26:19</td>   <td>6704</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testcases.saroj.BB_TestCase_02@63e5e5b4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
 </table>
